--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "Ivan Drondov",
   "license": "MIT",
   "dependencies": {
-    "jayson": "^2.0.5"
+    "glob": "^7.1.2",
+    "jayson": "^2.0.5",
+    "json2csv": "^3.11.5"
   }
 }
